--- a/resources/front/sass/_sections.scss
+++ b/resources/front/sass/_sections.scss
@@ -11,6 +11,7 @@ body {
     font-family: 'Manrope';
     font-style: normal;
     overflow-x: hidden;
+    color: $dark
 }
 
 main {
@@ -28,8 +29,13 @@ main {
 }
 
 .p-20 {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 25px;
+
+    @media(max-width: 1600px) {
+        font-size: 16px;
+        line-height: 22px;
+    }
 }
 
 .p-24 {
@@ -64,6 +70,11 @@ main {
     font-style: italic !important;
     font-size: 50px !important;
     line-height: 52px !important;
+
+    @media(max-width: 992px) {
+        font-size: 40px !important;
+        line-height: 45px !important;
+    }
 }
 
 .btn:hover {
