--- a/resources/front/sass/layout/header/_header.scss
+++ b/resources/front/sass/layout/header/_header.scss
@@ -1,5 +1,6 @@
 .header {
-    z-index: $zindex-header;
+    //z-index: $zindex-header;
+    z-index: 2;
 
     &-logo {
         @include linear-rfs(10rem, 15rem, 375px, 1920px, "width");
