Encaminhaado para revisão

--- a/resources/front/sass/abstracts/_variables.scss
+++ b/resources/front/sass/abstracts/_variables.scss
@@ -542,6 +542,7 @@ $aspect-ratios: ("15x1": 75%,
     "16x9": calc(9 / 16 * 100%),
     "21x9": calc(9 / 21 * 100%),
     "30x9": calc(9 / 30 * 100%),
+    "35x9": calc(9 / 35 * 100%),
 );
 // scss-docs-end aspect-ratios
 // stylelint-enable function-disallowed-list
