--- a/resources/front/sass/pages/_produtos.scss
+++ b/resources/front/sass/pages/_produtos.scss
@@ -8,6 +8,7 @@
         width: 100%;
         height: 100%;
         display: flex;
+        border-radius: 20px;
 
         @media(min-width: 576px) {
             border-radius: 20px;
